Styling: Only have a `-1%` margin on the left side, not the right side. Fixes a horizontal scroll bar showing up at high resolutions such as 2560x1600.
git-svn-id: https://plugins.svn.wordpress.org/vaultpress/trunk@1461121 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ Helpers
 
 /* grid container */
 .grid {
-	margin: 0 -1%;
+	margin: 0 0 0 -1%;
 }
 
 .half {
